turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:7: error: not found: value foward
    foward(50);
    ^